@@ -1,3 +1,4 @@
+- renamed errors to mistakes (2023/07/27 MS)
 - added endless game mode survivor (2023/07/27 MS)
 
 2.2.1:
